# Precalculus_Relations_and_Functions

./: README.md  main.py  pyproject.toml
notebooks/: 2.2_sample_problems.ipynb  common_functs.ipynb  composition_inverse.ipynb  exponentials.ipynb  lin_and_quad_test.ipynb  linear_functions.ipynb  quadratic_functions.ipynb  week1.ipynb  week2.ipynb
