[project]
name = "precalculus-relations-and-functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "notebook>=7.4.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "ruff>=0.11.6",
    "seaborn>=0.13.2",
    "sympy>=1.13.3",
]

[tool.ruff]
lint.ignore = ["F405", "F403", "E731"]
